# web-to-openwebui

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: README.md  ci-cd.yml  security-scan-scheduled.yml
docs/: CONTRIBUTING.md  KUBERNETES.md  SECURITY.md
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_configs.py  sample_content.py
tests/mocks/: __init__.py  openwebui_mock.py
tests/unit/: __init__.py  test_cleaning_profiles.py  test_cli.py  test_config.py  test_config_init.py  test_crawler.py  test_current_directory_manager.py  test_logging_config.py  test_metadata_tracker.py  test_openwebui_client.py  test_output_manager.py  test_retention_manager.py  test_scheduler.py  test_scrape_logic.py  test_state_manager.py  test_strategies.py
tests/utils/: __init__.py  helpers.py
webowui/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  scheduler.py  state_manager.py
webowui/config/examples/: README.md  example_site.yml.example  fandomwiki.yml.example  maxroll.yml.example  mediawiki.yml.example  simple_test.yml.example
webowui/scraper/: __init__.py  crawler.py  strategies.py
webowui/scraper/cleaning_profiles/: __init__.py  base.py  registry.py
webowui/scraper/cleaning_profiles/builtin_profiles/: README.md  fandomwiki_profile.py  maxroll_profile.py  mediawiki_profile.py  none_profile.py
webowui/storage/: __init__.py  current_directory_manager.py  metadata_tracker.py  output_manager.py  retention_manager.py
webowui/uploader/: __init__.py  openwebui_client.py
webowui/utils/: __init__.py  reclean.py
